--- a/resources/css/flexindex.css
+++ b/resources/css/flexindex.css
@@ -3,33 +3,25 @@
   box-sizing: border-box;
 }
 
-/* body {
-  height: 500;
-  width: 1000;
-} */
+body {
+  padding: 10px;
+}
 
 .gallery {
+  width: 90%;
   margin: auto;
-  height: 360px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  border: 1px solid black;
   transition: all 0.25s ease-in-out;
-  transform: translate(-50%, -50%);
 }
 
 .art {
-  width: 9%;
-  height: inherit;
-  background: yellow;
-  display: inline-block;
+  width: 100%;
   transition: all 0.25s ease-in-out;
   transform: translate3d(0, 0, 0);
 }
 
 .text {
-  height: inherit;
-  width: 360px;
+  width: 100%;
   padding-left: 10px;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -39,14 +31,14 @@
 }
 
 .art.active {
-  width: 360px;
-  height: inherit;
+  height: 300px;
+  width: 100%;
   transition: all 0.25s ease-in-out;
 }
 
 .art.inactive {
-  width: 5%;
-  height: inherit;
+  width: 100%;
+  height: 50px;
   opacity: .6;
   transition: all 0.25s ease-in-out;
 }
@@ -100,3 +92,9 @@
   background: #BB6859;
   background-size: cover;
 }
+
+/* @media screen and (min-width: 640px) {
+  .gallery{
+    display: flex;
+  }
+} */
