--- a/resources/css/flexindex.css
+++ b/resources/css/flexindex.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   transition: all 0.25s ease-in-out;
 }
 
@@ -25,6 +25,7 @@ body {
 
 .text {
   height: inherit;
+  width: inherit;
   margin: 5px;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -41,7 +42,7 @@ body {
 .art.inactive {
   width: 100%;
   height: 50px;
-  opacity: .6;
+  opacity: .4;
   transition: all 0.25s ease-in-out;
 }
 
@@ -95,8 +96,11 @@ body {
   background-size: cover;
 }
 
-/* @media screen and (min-width: 640px) {
+/* @media screen and (max-width: 640px) {
   .gallery{
     display: flex;
+  }
+  .text{
+    overflow: scroll;
   }
 } */
