still trying to test credential manager

--- a/resources/css/flexindex.css
+++ b/resources/css/flexindex.css
@@ -96,11 +96,11 @@ body {
   background-size: cover;
 }
 
-@media screen and (max-width: 640px) {
+/* @media screen and (max-width: 640px) {
   .gallery{
     display: flex;
   }
   .text{
     overflow: scroll;
   }
-}
+} */
