--- a/resources/css/flexindex.css
+++ b/resources/css/flexindex.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .gallery {
@@ -13,47 +13,88 @@ body {
   justify-content: center;
   align-items: center;
   /* border: 1px solid black; */
-  transition: all 0.25s ease-in-out;
+  /* transition: all 0.25s ease-in-out; */
 }
 
 .art {
-  height: 100px;
+  height: 4em;
   width: 100%;
-  transition: all 0.25s ease-in-out;
+  transition: height 0.25s ease-in-out;
   transform: translate3d(0, 0, 0);
 }
 
 .text {
   height: inherit;
   width: inherit;
-  margin: 5px;
+  /* margin: 5px; */
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 75px;
+  /* font-size: 75px; */
+  font-size: 4em;
   overflow: hidden;
+  line-height: 1em;
 }
 
+/* .art.active:after {
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70%;
+  height: 4em;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
+  background: 
+} */
+
 .art.active {
-  height: 300px;
+  /* block-size: auto; */
+  /* min-block-size: 150px; */
+  /* height: 300px; */
+  height: 8em;
   width: 100%;
-  transition: all 0.25s ease-in-out;
+  transition: height 0.25s ease-in-out;
 }
 
 .art.inactive {
   width: 100%;
   height: 50px;
   opacity: .4;
-  transition: all 0.25s ease-in-out;
+  transition: height 0.25s ease-in-out;
 }
 
 .art.frame1 {
   background: #FFCCBB;
   background-size: cover;
+  transition: background 0.25s ease-in-out;
+}
+
+.art.frame1.active::after {
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70%;
+  height: 4em;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #FFCCBB 50%);
 }
 
 .art.frame2 {
   background: #F78D78;
   background-size: cover;
+  transition: background 0.25s ease-in-out;
+}
+
+.art.frame2.active::after {
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70%;
+  height: 4em;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #F78D78);
 }
 
 .art.frame3 {
